@@ -1,5 +1,10 @@
 2001-07-24  Richard Hestilow  <hestilow@ximian.com>
 
+	* bonobo-config-archiver.c (pb_set_fn): Do sanity checking on
+	the rollback ID we get.
+
+2001-07-24  Richard Hestilow  <hestilow@ximian.com>
+
 	* config-log.c (parse_line): Ok, bad fix. Move that to the archiver.
 
 	* bonobo-config-archiver.c (pb_set_fn): Moved here.
